--- a/Moeller/CSS/home.css
+++ b/Moeller/CSS/home.css
@@ -67,7 +67,7 @@ button:hover {
   }
 }
 #welcomeBanner img {
-  width: 500px;
+  width: 400px;
 }
 .slider {
   width: 100%;
@@ -430,7 +430,7 @@ button:hover {
 }
 .savings {
   width: 240px;
-  height: 300px;
+  height: 275px;
   border-radius: 10px;
   padding-top: 20px;
   padding-left: 20px;
@@ -439,6 +439,7 @@ button:hover {
   color: #fff;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, .25);
   position: relative;
+	display: flex;
 }
 .savings h3 {
   font-family: 'Raleway', sans-serif;
@@ -484,6 +485,7 @@ button:hover {
     margin-left: auto;
     margin-right: auto;
   }
+	
 }
 
 @media only screen and (min-width: 500px) {
@@ -492,14 +494,22 @@ button:hover {
 	}
 }
 
+@media only screen and (max-width: 875px) and (min-width: 500px) {
+  .savings {
+    width: 70%;
+    height: 150px;
+    margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+
 @media only screen and (max-width: 875px) {
   #innerDescContain {
     display: inherit;
   }
-  .savings {
-    width: 70%;
-    min-height: 150px;
-	max-height: 180px;
+	.savings {
     margin-bottom: 25px;
     margin-left: auto;
     margin-right: auto;
