--- a/Moeller/CSS/testimonial.css
+++ b/Moeller/CSS/testimonial.css
@@ -1,35 +1,6 @@
-.parent { 
-display: grid; 
-grid-template-columns: repeat(3, 1fr); 
-grid-template-rows: repeat(3, 1fr); 
-grid-column-gap: 25px;
-grid-row-gap: 25px; 
-}
-
-#topBanner {
-  background-image: url("../images/stockImage1.jpg");
-  width: 100%;
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-}
-#innerBanner {
-  position: absolute;
-  top: 180px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-#bannerHeader {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  color: #fff;
-  font-size: 2.5em;
-	margin: 0;
-}
-#topBanner p {
-  font-family: 'Raleway', sans-serif;
-  color: #fff;
+#temp{
+	height:  600px;
+	padding: 55px;
+	  font-family: 'Raleway', sans-serif;
   font-weight: 300;
-  font-size: 1.2em;
-	margin-top: 25px;
 }
