--- a/Moeller/CSS/home.css
+++ b/Moeller/CSS/home.css
@@ -127,7 +127,7 @@ button:hover {
 #contactbanner {
   height: 100px;
   width: 100%;
-  background-color: #fff;
+  background-color: rgba(255,255,255,1);
   position: relative;
   justify-content: space-between;
 }
@@ -153,6 +153,7 @@ button:hover {
   display: inline-block;
   position: relative;
   top: 7px;
+
 }
 .text-box div {
   display: inline-block;
@@ -160,6 +161,7 @@ button:hover {
   transform: rotateX(-90deg);
   opacity: 0;
   animation-timing-function: ease;
+		z-index: 0;
 }
 .text-box div:nth-child(1) {
   animation: rollDown 30s forwards infinite;
@@ -403,8 +405,8 @@ button:hover {
 }
 #descContainer {
   height: auto;
-  background-color: #fff;
-  margin-top: -1px;
+  background-color: rgba(255,255,255,1);
+	padding-top: 5px;
 }
 #descContainer h2 {
   margin: 0;
@@ -437,9 +439,9 @@ button:hover {
   padding-right: 20px;
   background: linear-gradient(209deg, rgba(130, 169, 208, 1) 0%, rgba(51, 96, 144, 1) 59%);
   color: #fff;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, .25);
+  box-shadow: 5px 5px 5px rgba(196, 144, 71, .75);
   position: relative;
-	display: flex;
+  display: flex;
 }
 .savings h3 {
   font-family: 'Raleway', sans-serif;
@@ -485,15 +487,12 @@ button:hover {
     margin-left: auto;
     margin-right: auto;
   }
-	
 }
-
 @media only screen and (min-width: 500px) {
-	#talkBtn{
-		display: none;
-	}
+  #talkBtn {
+    display: none;
+  }
 }
-
 @media only screen and (max-width: 875px) and (min-width: 500px) {
   .savings {
     width: 70%;
@@ -503,13 +502,11 @@ button:hover {
     margin-right: auto;
   }
 }
-
-
 @media only screen and (max-width: 875px) {
   #innerDescContain {
     display: inherit;
   }
-	.savings {
+  .savings {
     margin-bottom: 25px;
     margin-left: auto;
     margin-right: auto;
@@ -533,6 +530,9 @@ button:hover {
   #contactbanner {
     height: 175px;
   }
+	.text-box{
+		transform: translateY(3px);
+	}
 }
 .badge {
   position: absolute;
