--- a/Moeller/CSS/story.css
+++ b/Moeller/CSS/story.css
@@ -1,5 +1,5 @@
 #BannerContainer {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: transparent;
   position: absolute;
@@ -16,7 +16,7 @@
   color: white;
 }
 .div-one {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: url('../images/Taupe-sofa.jpeg');
   background-repeat: no-repeat;
@@ -28,7 +28,7 @@
   -webkit-clip-path: polygon(100vw 0, 0% 100%, 80vw 100vh);
   clip-path: polygon(100vw 0, 0% 100vh, 100vw 100vh);
   background: url('../images/featured-image-kitchen-layouts.jpeg');
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -53,7 +53,7 @@
 
 #innerMilwaukee h1{
 	margin: 0;
-	transform: translateY(200px);
+	transform: translateY(20px);
 	background-color: rgba(50,22,22,.60);
 	color: white;
 		padding: 20px;
@@ -62,41 +62,58 @@
 #innerMilwaukee p {
   font-size: 20px;
 	right: 10px;
-	transform: translateY(180px);
 	background-color: rgba(50,22,22,.60);
 	color: #fff;
 	padding: 20px;
 
 }
+
+@media only screen and (max-width: 700px) {
+	#innerProfile{
+		flex-direction: column;
+	}
+	#profileImg{
+		  margin-left: auto;
+  margin-right: auto;
+	}
+	#profileDesc{
+		width: 90%;
+		  margin-left: auto;
+  margin-right: auto;
+		transform: translateX(-25px);
+	}
+}
+
 #container2 {
-  height: 250px;
+  height: auto;
   background-color: #131313;
   color: #C49047;
 }
 #profileImg {
   width: 200px;
   height: 200px;
-  flex-shrink: 0;
   border-radius: 150px;
   border: 3px solid #C49047;
   margin-top: 20px;
 }
 #innerProfile {
   display: flex;
-  width: 600px;
+  width: 75%;
+	max-width: 700px;
   margin-left: auto;
   margin-right: auto;
-  justify-content: space-between;
+  justify-content: space-around;
   align-content: center;
+	padding-bottom: 25px;
 }
 #profileDesc {
-  width: 400px;
+  width: 95%;
   font-family: 'Raleway', sans-serif;
   margin-top: 15px;
   margin-left: 25px;
 }
 #profileDesc p {
-  width: 420px;
+  width: 99%;
 }
 #profileDesc h3 {
   text-transform: uppercase;
@@ -123,11 +140,14 @@ font-size: 26px;
 	margin: 0;
 }
 #explainer p {
-  width: 60%;
+  width: 80%;
   max-width: 600px;
 	color: #fff;
 }
 #explainer img {
   width: 85%;
   max-width: 1000px;
+	border: 2px solid #fff;
+	border-radius: 15px;
+	margin: 25px;
 }
