--- a/Moeller/CSS/testimonial.css
+++ b/Moeller/CSS/testimonial.css
@@ -1,6 +1,13 @@
 #temp{
-	height:  600px;
+	height:  80vh;
 	padding: 55px;
 	  font-family: 'Raleway', sans-serif;
   font-weight: 300;
+	display: flex;
+	flex-direction: column;
+	
+}
+
+#temp a{
+	vertical-align: middle;
 }
