--- a/Moeller/CSS/contact.css
+++ b/Moeller/CSS/contact.css
@@ -29,6 +29,7 @@ label {
   font-weight: 400;
 	width: 90%;
 	max-width: 700px;
+	padding-top: 25px;
 }
 #survey-form h2 {
   margin-top: 0px;
@@ -104,7 +105,6 @@ label {
   -o-transition: all .4s ease-in-out;
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, .25);
 }
 .submit-button:hover {
   background-position: 100% 0;
