--- a/Moeller/CSS/home.css
+++ b/Moeller/CSS/home.css
@@ -16,7 +16,6 @@ button {
   -o-transition: all .4s ease-in-out;
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, .25);
 }
 button:hover {
   background-position: 100% 0;
@@ -24,13 +23,6 @@ button:hover {
   -o-transition: all .4s ease-in-out;
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
-}
-#bannerTitle {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  font-size: 45px;
 }
 #brand {
   font-family: 'Raleway', sans-serif;
@@ -437,7 +429,7 @@ button:hover {
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
-  background: linear-gradient(209deg, rgba(130, 169, 208, 1) 0%, rgba(51, 96, 144, 1) 59%);
+  background: linear-gradient(209deg, rgba(130, 169, 208, 1) 0%, rgba(18,97,160, 1) 59%);
   color: #fff;
   box-shadow: 5px 5px 5px rgba(196, 144, 71, .75);
   position: relative;
