--- a/Moeller/CSS/services.css
+++ b/Moeller/CSS/services.css
@@ -1,125 +1,63 @@
-h1 {
-  font-family: 'Abril Fatface', cursive;
-  font-size: 60px;
-  font-weight: 400;
-	margin: 0;
-	width: 600px;
-}
-span {
-  font-style: italic;
-}
-button {
-  font-family: 'Shippori Mincho', serif;
-  font-size: 20px;
-  font-weight: 800;
-  border-style: none;
-  border-radius: 5px;
-  padding: 10px;
-  color: black;
-  background-color: #fff;
-  transition: 0.3s;
-  width: 300px;
-	height: 50px;
-	display: block;
-	float: right;
-
-}
-button:hover {
-  color: #fff;
-  background: #000;
-}
-#welcomeBanner p {
-  font-family: 'Shippori Mincho', serif;
-  font-size: 20px;
-  font-weight: 400;
-  margin-top: 0;
-  margin-bottom: 30px;
-}
-#welcomeBanner {
+#BannerContainer {
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
   position: absolute;
-  z-index: 10;
-  width: 750px;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  top: 375px;
-  border-radius: 15px;
-  background-color: rgba(52, 97, 143, 0.6);
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#BannerContainer h1 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 45px;
+  font-weight: 600;
+  text-transform: uppercase;
   color: white;
-  padding: 15px;
 }
-.slider {
-  max-width: 100%;
-  height: 1000px;
-  position: relative;
-}
-.slide1, .slide2, .slide3, .slide4, .slide5 {
-  position: absolute;
+.div-one {
   width: 100%;
-  height: 100%;
-}
-.slide1 {
-  background-image: url("images/6.jpg");
-  background-position: center;
+  height: 100vh;
+  background: url('../images/Taupe-sofa.jpeg');
+  background-repeat: no-repeat;
   background-size: cover;
-  animation: fade 18s infinite;
-  -webkit-animation: fade 18s infinite;
-}
-.slide2 {
-  background-image: url("images/4.jpg");
   background-position: center;
-  background-size: cover;
-  animation: fade2 18s infinite;
-  -webkit-animation: fade2 18s infinite;
 }
-.slide3 {
-  background-image: url("images/3.jpg");
-  background-position: center;
-  background-size: cover;
-  animation: fade3 18s infinite;
-  -webkit-animation: fade3 18s infinite;
-}
-/*
-@keyframes fade
-{
-  0%   {opacity:1}
-  33.333% { opacity: 0}
-  66.666% { opacity: 0}
-  100% { opacity: 1}
-}
-@keyframes fade2
-{
-  0%   {opacity:0}
-  33.333% { opacity: 1}
-  66.666% { opacity: 0 }
-  100% { opacity: 0}
-}
-@keyframes fade3
-{
-  0%   {opacity:0}
-  33.333% { opacity: 0}
-  66.666% { opacity: 1}
-  100% { opacity: 0}
-}
-*/
-#servicesContainer {
-  background-color: #E6E6E6;
-  padding: 25px;
-}
-#contactbanner {
-  height: 100px;
-  width: 100%;
-  background-color: rgba(255, 255, 255, .9);
-  position: relative;
-	align-content: center;
-  
-}
-#innerbanner {
-  width: 90%;
-	height: 100px;
-	background-color: antiquewhite;
+
+.service{
+	height: 50vh;
+	padding: 25px;
 	display: flex;
-	margin-left: auto;
-	margin-right: auto;
+	justify-content: center;
+	align-content: space-between;
+}
+
+.service h1{
+	 font-family: 'Raleway', sans-serif;
+  font-size: 40px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #000;
+	word-wrap: break-word;
+}
+
+.innerService{
+	width: 90%;
+	max-width: 350px;
+	margin-right: 25px;
+}
+
+.innerServiceImg{
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 350px;
+}
+
+#cleaningImg{
+	background-image: url("../images/laundry-room-1.jpeg")
+}
+
+#mainContainer{
+	background-color: #fff;
 }
