--- a/Moeller/CSS/story.css
+++ b/Moeller/CSS/story.css
@@ -11,7 +11,7 @@
 #BannerContainer h1 {
   font-family: 'Raleway', sans-serif;
   font-size: 45px;
-  font-weight: 600;
+  font-weight: 500;
   text-transform: uppercase;
   color: white;
 }
@@ -34,36 +34,7 @@
   background-size: cover;
   background-position: bottom;
 }
-#milwaukee {
-  background-image: url("../images/explore2.jpg");
-  height: 700px;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#innerMilwaukee {
-  width: 80%;
-  height: 80%;
-  font-family: 'Raleway', sans-serif;
-  color: #000;
-}
-#innerMilwaukee h1 {
-  margin: 0;
-  transform: translateY(20px);
-  background-color: rgba(50, 22, 22, .60);
-  color: white;
-  padding: 20px;
-}
-#innerMilwaukee p {
-  font-size: 20px;
-  right: 10px;
-  background-color: rgba(50, 22, 22, .60);
-  color: #fff;
-  padding: 20px;
-}
+
 @media only screen and (max-width: 700px) {
   #innerProfile {
     flex-direction: column;
@@ -122,28 +93,32 @@
   font-size: 20px;
   font-weight: 500;
 }
-#explainer {
-  font-family: 'Raleway', sans-serif;
-  background-color: #131314;
-  padding-top: 25px;
+
+#innerAbout{
+	max-width: 800px;
+	min-width: 300px;
+	margin-left: auto;
+	margin-right: auto;
 }
-#explainer h1 {
-  font-size: 26px;
-  text-transform: uppercase;
-  color: #fff;
-  margin-left: 25px;
-  margin-right: 25px;
-  font-weight: 500
+
+#aboutContainer{
+	background-color: #131314;
+	font-family: 'Raleway', sans-serif;
+	color: white;
+	padding: 20px;
 }
-#explainer p {
-  width: 80%;
-  max-width: 600px;
-  color: #fff;
+
+#aboutContainer h1{
+	margin: 0;
 }
-#explainer img {
-  width: 85%;
-  max-width: 1000px;
-  border: 2px solid #fff;
-  border-radius: 15px;
-  margin: 25px;
+
+#aboutContainer p{
+	font-weight: 400;
+	font-size: 18px;
+}
+
+#aboutContainer li{
+	list-style-type:disc;
+	margin-bottom: 25px;
+	margin-left: 30px;
 }
