--- a/Moeller/CSS/services.css
+++ b/Moeller/CSS/services.css
@@ -11,53 +11,229 @@
 #BannerContainer h1 {
   font-family: 'Raleway', sans-serif;
   font-size: 45px;
-  font-weight: 600;
+  font-weight: 500;
   text-transform: uppercase;
   color: white;
 }
 .div-one {
   width: 100%;
   height: 100vh;
-  background: url('../images/Taupe-sofa.jpeg');
+  background: url('../images/Great-Room-Built-in-Wide-shot-with-Art-2.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-
-.service{
-	height: 50vh;
-	padding: 25px;
-	display: flex;
-	justify-content: center;
-	align-content: space-between;
+@media only screen and (max-width: 750px) {
+  .serviceDiv {
+    flex-direction: column;
+    align-items: center;
+  }
+  .innerService {
+    width: 90%;
+  }
+  .innerServiceImg {
+    width: 100%;
+    margin-top: 25px;
+  }
+	#memberHeader{
+		flex-direction: column;
+	}
+	#memberLogo{
+		margin-bottom: 25px;
+	}
+	#memberHeader h2{
+		text-align: center;
+	}
+	#innerMembership{
+		flex-direction: column;
+	}
+	.membershipCard{
+		margin-left: auto;
+		margin-right: auto;
+	}	
 }
-
-.service h1{
-	 font-family: 'Raleway', sans-serif;
+.serviceDiv {
+  display: flex;
+  width: 95%;
+  max-width: 800px;
+  justify-content: space-around;
+}
+.service {
+  height: auto;
+  display: flex;
+  padding-top: 25px;
+  padding-left: 25px;
+  padding-right: 25px;
+  justify-content: center;
+  align-content: space-around;
+  background-color: #131314;
+  color: #fff;
+}
+.service h1 {
+  font-family: 'Raleway', sans-serif;
   font-size: 40px;
   font-weight: 400;
   text-transform: uppercase;
+  color: #fff;
+  word-wrap: break-word;
+  margin-top: 0;
+}
+.innerService {
+  margin-right: 25px;
+	max-width: 300px;
+  min-width: 300px;
+}
+.innerServiceImg {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-width: 330px;
+  min-width: 300px;
+  height: 350px;
+  border-radius: 10px;
+}
+#LandscapingImg {
+  background-image: url("../images/landscaping-101.jpeg")
+}
+#repairImg {
+  background-image: url("../images/diy-home-maintenance-tips-ideas-1068x713.jpeg")
+}
+#remodelingImg {
+  background-image: url("../images/iStock_172413371.jpeg")
+}
+#InteriorImg {
+  background-image: url("../images/Kitchen-Feature-Photo-scaled.jpeg")
+}
+#DoorImg {
+  background-image: url("../images/index-windows.jpeg")
+}
+#PaintingImg {
+  background-image: url("../images/paintingtipsMain.jpeg")
+}
+#PlumbingImg {
+  background-image: url("../images/cropped-plumbing-electrical.jpeg")
+}
+#SecurityImg {
+  background-image: url("../images/simplisafe-8.jpeg")
+}
+#TheaterImg {
+  background-image: url("../images/c1a0157b82bd5bff0bb86c6d5cc83810.702-S2-Black-Gloss-Cinema-with-DB4S-Grilles-Off.jpg")
+}
+#cleaningImg {
+  background-image: url("../images/laundry-room-1.jpeg")
+}
+
+#option10{
+	padding-bottom: 25px;
+}
+
+#mainContainer {
+  background-color: #fff;
+}
+#membershipContainer {
+  background: linear-gradient(45deg, rgba(69, 29, 47, 1) 0%, rgba(145, 61, 99, 1) 100%);
+  height: auto;
+  padding: 25px;
+}
+#innerMembership {
+  display: flex;
+  width: 100%;
+  height: 50%;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-around;
+}
+.membershipCard {
+  margin-top: 25px;
+  font-family: 'Raleway', sans-serif;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 250px;
+  max-width: 350px;
+	box-shadow: 0px 10px 15px  rgba(0, 0, 0, .55);
+}
+.membershipCard h3 {
+  font-size: 25px;
+  margin: 25px;
+  font-weight: 500;
+}
+.membershipCard ul {
+  margin-left: 20px;
+  list-style-type: disc;
+}
+.membershipCard li {
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 25px;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+#card1 {
+  border-radius: 10px;
+  background: linear-gradient(45deg, rgba(19, 19, 20, 1) 0%, rgba(71, 71, 75, 1) 100%);
+}
+#card2 {
+  background-image: linear-gradient(45deg, rgba(138, 101, 49, 1) 0%, rgba(255, 187, 92, 1) 100%);
+  border-radius: 10px;
+}
+.svcButton {
+  width: 250px;
+  color: #fff;
+  margin-bottom: 25px;
+  font-weight: 500;
+  padding: 10px;
+  letter-spacing: 1px;
+  border-radius: 50px;
+  font-size: 15px;
+  background-color: transparent;
+  text-transform: uppercase;
+  border: 2px solid #fff;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+.svcButton:hover {
+  background-color: #fff;
   color: #000;
-	word-wrap: break-word;
 }
-
-.innerService{
-	width: 90%;
-	max-width: 350px;
-	margin-right: 25px;
+#cardImage1 {
+  background-image: url("../images/39266614df704ce92c07fdee58656643a56a2b53.jpeg");
+  height: 150px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-position: center;
+  background-size: cover;
 }
-
-.innerServiceImg{
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	width: 350px;
+#cardImage2 {
+  background-image: url("../images/modern-kitchen-kitchen-island-green-marble-verde-tinos-carrara-mix-kitchen-1614609430.jpeg");
+  height: 150px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-position: center;
+  background-size: cover;
 }
-
-#cleaningImg{
-	background-image: url("../images/laundry-room-1.jpeg")
+#memberHeader {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1000px;
 }
-
-#mainContainer{
-	background-color: #fff;
+#memberLogo {
+  width: 200px;
+  height: auto;
+}
+#memberHeader h2 {
+  font-size: 1.4em;
+  margin: 0;
+  color: #E6D2B7;
+  max-width: 550px;
+  min-width: 300px;
+  text-transform: uppercase;
 }
