--- a/Moeller/CSS/home.css
+++ b/Moeller/CSS/home.css
@@ -23,13 +23,14 @@ button:hover {
   -o-transition: all .4s ease-in-out;
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
+	cursor: pointer;
 }
 #brand {
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
   letter-spacing: 5px;
   text-transform: uppercase;
-  font-size: 25px;
+  font-size: 21px;
 }
 #sliderCover {
   position: absolute;
@@ -64,7 +65,8 @@ button:hover {
 
 #welcomeBanner h4{
 	text-transform: uppercase;
-	font-weight: 400
+	font-weight: 400;
+	font-size: 20px
 }
 .slider {
   width: 100%;
