--- a/Moeller/CSS/services.css
+++ b/Moeller/CSS/services.css
@@ -14,8 +14,8 @@
   font-weight: 500;
   text-transform: uppercase;
   color: white;
-	padding: 25px;
-	text-align: center;
+  padding: 25px;
+  text-align: center;
 }
 .div-one {
   width: 100%;
@@ -37,37 +37,38 @@
     width: 100%;
     margin-top: 25px;
   }
-	#memberHeader{
-		flex-direction: column;
-	}
-	#memberLogo{
-		margin-bottom: 25px;
-	}
-	#memberHeader h2{
-		text-align: center;
-	}
-	#innerMembership{
-		flex-direction: column;
-	}
-	.membershipCard{
-		margin-left: auto;
-		margin-right: auto;
-	}
-	#innerContactBanner2{
-		flex-direction: column;
-		height: auto;
-	}
-	#contactBanner2{
-		height: auto;
-			padding-bottom: 25px;
-	}
+  #memberHeader {
+    flex-direction: column;
+  }
+  #memberLogo {
+    margin-bottom: 25px;
+  }
+  #memberHeader h2 {
+    text-align: center;
+  }
+  #innerMembership {
+    flex-direction: column;
+  }
+  .membershipCard {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #innerContactBanner2 {
+    flex-direction: column;
+    height: auto;
+	  margin-top: -25px;
+  }
+  #contactBanner2 {
+    height: auto;
+    padding-bottom: 25px;
+  }
 }
 .serviceDiv {
   display: flex;
   width: 95%;
   max-width: 800px;
   justify-content: space-around;
-	align-items: center;
+  align-items: center;
 }
 .service {
   height: auto;
@@ -91,8 +92,8 @@
 }
 .innerService {
   margin-right: 25px;
-	margin-left: 25px;
-	max-width: 300px;
+  margin-left: 25px;
+  max-width: 300px;
   min-width: 300px;
 }
 .innerServiceImg {
@@ -134,11 +135,9 @@
 #cleaningImg {
   background-image: url("../images/laundry-room-1.jpeg")
 }
-
-#option10{
-	padding-bottom: 25px;
+#option10 {
+  padding-bottom: 25px;
 }
-
 #mainContainer {
   background-color: #fff;
 }
@@ -165,7 +164,7 @@
   justify-content: space-between;
   min-width: 250px;
   max-width: 350px;
-	box-shadow: 0px 10px 15px  rgba(0, 0, 0, .55);
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, .55);
 }
 .membershipCard h3 {
   font-size: 25px;
@@ -249,47 +248,39 @@
   min-width: 300px;
   text-transform: uppercase;
 }
-
-#HPA{
-	height: auto;
-	background: rgba(19,19,20,.1)
+#HPA {
+  height: auto;
+  background: rgba(19, 19, 20, .1)
 }
-
-#innerHPA{
-	width:  75%;
-		margin-left: auto;
-	margin-right: auto;
-	  font-family: 'Raleway', sans-serif;
-	padding: 5px;
-	max-width: 700px;
+#innerHPA {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Raleway', sans-serif;
+  padding: 5px;
+  max-width: 700px;
 }
-
-#HPA h2{
-		color: black;
+#HPA h2 {
+  color: black;
 }
-
-#contactBanner2{
-	background: rgba(19,19,20,.1)
+#contactBanner2 {
+  background-color: #131314;
 }
-
-#innerContactBanner2{
-	display: flex;
-		align-items: center;
-	margin-left: auto;
-	margin-right: auto;
-	width:  90%;
-	max-width: 700px;
-	justify-content: space-between;
-	padding: 0;
-	height: auto;
-
+#innerContactBanner2 {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  max-width: 650px;
+  justify-content: space-between;
+  padding: 0;
+  height: auto;
 }
-
-#contactBanner2 h2{
-		color: black;
-	font-size: 30px;
+#contactBanner2 h2 {
+  color: white;
+  font-size: 30px;
 }
-
 .btn2 {
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
@@ -298,7 +289,7 @@
   padding: 10px;
   color: white;
   background-image: linear-gradient(45deg, rgba(138, 101, 49, 1) 0%, rgba(255, 187, 92, 1) 100%);
-  width: 300px;
+  width: 250px;
   height: 50px;
   letter-spacing: 5px;
   text-transform: uppercase;
@@ -309,7 +300,6 @@
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
 }
-
 .btn2:hover {
   background-position: 100% 0;
   moz-transition: all .4s ease-in-out;
