--- a/Moeller/CSS/services.css
+++ b/Moeller/CSS/services.css
@@ -95,6 +95,7 @@
   margin-left: 25px;
   max-width: 300px;
   min-width: 300px;
+	padding-left: 15px;
 }
 .innerServiceImg {
   background-position: center;
