--- a/Moeller/CSS/testimonial.css
+++ b/Moeller/CSS/testimonial.css
@@ -1,13 +1,75 @@
-#temp{
-	height:  80vh;
-	padding: 55px;
-	  font-family: 'Raleway', sans-serif;
-  font-weight: 300;
-	display: flex;
-	flex-direction: column;
-	
+#BannerContainer {
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
+  position: absolute;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#BannerContainer h1 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 45px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: white;
+  padding: 25px;
+  text-align: center;
 }
 
-#temp a{
-	vertical-align: middle;
+@media only screen and (max-width: 400px) {
+	#BannerContainer h1{
+		font-size: 35px;
+	}
 }
+
+.div-one {
+  width: 100%;
+  height: 100vh;
+  background: url('../images/family.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#HPA {
+  height: auto;
+  background: rgba(19, 19, 20, .1)
+}
+#innerHPA {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Raleway', sans-serif;
+  padding: 5px;
+  max-width: 700px;
+}
+#HPA h2 {
+  color: black;
+}
+
+#mainContainer h2{
+	color:black;
+}
+
+.speech-bubble {
+	 filter: drop-shadow(-1px -1px 2px rgba(0, 0, 0, .10)) drop-shadow(1px 2px 2px rgba(0, 0, 0, .15));
+	padding: 25px;
+width: 80%;
+	 position: relative;
+	   font-family: 'Raleway', sans-serif;
+	 font-size: 1.2rem;
+	 font-weight: 400;
+	 background: linear-gradient(45deg, rgba(19, 19, 20, 1) 0%, rgba(71, 71, 75, 1) 100%);
+	 color: white;
+	border-radius: 5px;
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.emptydiv{
+	height: 1000px;
+}
+ 
